# template

./: .cz.toml  .dockerignore  .editorconfig  .env  .env.prod  .eslintignore  .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  Dockerfile  README.md  action.yml  args.bat  args.cmd  banner.txt  commitlint.config.cjs  config.bat  eslint.config.mjs  gunicorn_config.py  index.html  main.bat  main.py  package-lock.json  package.json  package.nls.json  package.nls.zh.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rollup.config.ts  run.py  schema.py  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
.changeset/: config.json  violet-news-kneel.md
_github/workflows/: release-publish.yaml  test-action.yaml
app/: app.py  config.py  main.py  router.py  schema.py
app/auth/: __init__.py  service.py
app/auth/dependencies/: current_user.py  oauth_from_data.py  token.py
app/auth/models/: token.py  user.py
app/auth/routers/: login.py  user.py
app/auth/utils/: security_util.py
app/core/: args.py  config.py  database.py  env.py  log.py
app/dependencies/: session.py
app/math/: package.json
app/math/src/: index.ts
app/models/: query.py  result.py
app/utils/: file_util.py
apps/admin/: CHANGELOG.md  package.json
apps/admin/src/: index.ts
config/: application.prod.yaml  application.yaml  logging.yaml
database/: data.sqlite  init.sql
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
env/: .env  .env.production
http/: login.http  test.http
l10n/: bundle.l10n.zh-cn.json
mock/: user.ts
schema/: application.schema.json  logging.schema.json  schema.json
sql/: init.sql
src/: App.vue  __init__.py  app.config.ts  app.py  app.vue  appConfig.ts  args.py  commands.ts  config.py  config.ts  constant.ts  constants.ts  env.py  error.ts  extension.ts  index.ts  log.ts  logger.ts  main.ts  util.ts  view.ts
src/api/: __init__.py  defineApi.ts  index.ts  login_api.py  test_api.py
src/api/modules/: index.ts  user.ts
src/api/schemas/: user.ts
src/app/: __init__.py  main.py
src/cmd/: iCmd.ts  index.ts
src/cmd/impl/: HelloWorldCmd.ts
src/components/: HelloWorld.vue
src/core/: config.py  db.py  env.py  jwt.py  redis.py
src/i18n/: index.ts
src/i18n/locales/: en-us.ts  zh-cn.ts
src/layout/: index.vue
src/layout/body/: index.vue
src/layout/header/: index.vue
src/model/: user_model.py
src/panels/: HelloPanel.ts  Panel.ts
src/plugins/: index.ts  unocss.ts
src/router/: index.ts  routes.ts
src/service/: user_service.py
src/store/: app.ts  defineStore.ts
src/style/: index.css
src/util/: config.py  file.py  index.ts  logger.ts  logging.py  request.ts  result.py  title.ts
src/utils/: docUtil.ts  fsUtil.ts  request.ts
src/views/: MainView.vue
src/views/error/: NotFoundView.vue
types/: components.d.ts  env.d.ts  router-meta.d.ts  vite-env.d.ts  vue-i18n.d.ts
webview/hello/: CHANGELOG.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
webview/message/: CHANGELOG.md  package.json
webview/types/: message.d.ts
(+7 files in other folders)
