[project]
name = "app"
version = "0.1.0"
description = "python template project"
authors = [{ name = "xiaohuohumax" }]
dependencies = [
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "ruamel-yaml>=0.18.6",
    "flask-jwt-extended>=4.6.0",
    "flask-cors>=4.0.0",
    "sqlmodel>=0.0.16",
    "pymysql>=1.1.0",
    "cryptography>=42.0.5",
    "gunicorn>=22.0.0",
    "gevent>=24.2.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.rye.scripts]
start = "python -m run"
