[project]
name = "app"
version = "0.1.0"
description = "python template project"
authors = [{ name = "xiaohuohumax" }]
dependencies = [
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "ruamel-yaml>=0.18.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.rye.scripts]
start = "python -m main"
