[project]
name = "python_template"
version = "0.0.1"
description = "python template"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.8"
authors = [{ name = "xiaohuohumax" }]
keywords = ["python", "template"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "ruamel-yaml>=0.18.6",
]

[project.urls]
Homepage = "https://github.com/xiaohuohumax/template#readme"
Source = "https://github.com/xiaohuohumax/template"
Tracker = "https://github.com/xiaohuohumax/template/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple"
# default = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["app", "LICENSE", "README.md", "pyproject.toml"]
exclude = ["__pycache__"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
exclude = [".git", ".ruff_cache", ".venv", ".vscode", "dist"]
target-version = "py312"

[tool.rye]
managed = true
dev-dependencies = ["commitizen>=3.30.0", "pip>=24.3.1"]

[tool.rye.scripts]
start = "python -m app.main"
dev = "python -m app.main -m dev"
prod = "python -m app.main -m prod"
commit = { chain = ["schema", "lint_fix", "fmt", "git_add", "git_commit"] }
schema = "python -m schema"
build_image = "docker build -t python_template ."
save_image = "docker save -o dist/python_template_image.tar python_template"

git_add = "git add ."
git_commit = "cz commit"
lint_fix = "rye lint --fix -q"
fmt = "rye fmt -q"
